@@ -109,6 +109,7 @@ def writev2d(oms, v2dFile):
 
 	nFFT = int(corr['FFT_SIZE'][0])
 	specAvg = int(corr['SPECTRAL_AVERAGE'][0])
+	
 	if corr['POLARIZATION'][0] == 'NO':
 		doPolar = 'False'
 	else:
@@ -125,6 +126,10 @@ def writev2d(oms, v2dFile):
 	out.write('# base .v2d file generated by %s version %s operating on file %s\n\n' % (program, version, omsFile))
 	out.write('vex = %s\n\n' % vexFile)
 	out.write('antennas =%s\n\n' % stnString)
+
+	if corr.has_key('TWEAK_INT_TIME'):
+		if not corr['TWEAK_INT_TIME'][0] in ['YES', 'yes']:
+			out.write('tweakIntTime = True\n\n')
 
 	for s in oms['SOURCE_INFO']:
 		srcParams = ''
